# tdx-measure

./: .gitignore  CODEOWNERS  Cargo.toml  README.md  extract_boot_vars.py  extract_config_files.py
.github/workflows/: ci.yml
cli/: Cargo.toml  output.out
cli/src/: main.rs  transcript.rs
src/: acpi.rs  image.rs  kernel.rs  lib.rs  machine.rs  tdvf.rs  util.rs
