[package]
name = "dstack-mr"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A CLI tool for calculating TDX measurements for DStack images"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-human-bytes = "0.1"
hex = "0.4"
thiserror = "1.0"
sha2 = "0.10"
anyhow = "1.0"
object = "0.36"
hex-literal = "0.4"
fs-err = "2.11"
bon = "2.3"
log = "0.4"
